@startuml

      class  QuantityException {
      }

      class  UnknownUnitException {
          ~ a1 : String
          ~ a2 : String
      }

   QuantityException o-- units.Quantity : q1
   QuantityException o-- units.Quantity : q2
   UnknownUnitException -up-|>  QuantityException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
